--- a/src/main/resources/static/upload_product.html
+++ b/src/main/resources/static/upload_product.html
@@ -28,6 +28,8 @@
   
   <label for="description">Descripción:</label>
   <textarea cols=40 id="description" name="description" rows=5></textarea><br><br>
+
+  <input type="hidden" name="_csrf" value="{{token}}"/>
   
   <input type="submit" value="Subir producto">
 </form>
